--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: https://github.com/edmonds/ifupdown-multi
 
 Package: ifupdown-multi
 Architecture: all
-Depends: python3, ${misc:Depends}, ${python3:Depends}
+Depends: python3:any, ${misc:Depends}, ${python3:Depends}
 Enhances: ifupdown
 Description: multiple default gateway support for ifupdown
  This package integrates support for multiple default gateways on
